Fixed text overlapping nav button

--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -161,7 +161,7 @@
 
 .project__swap-info {
   display: none;
-  z-index: 5;
+  z-index: 2;
 }
 
 .project__info-arrow-l {
